[gd_scene load_steps=15 format=3 uid="uid://bv7816js3kr4k"]

[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1_ljbdy"]
[ext_resource type="Script" uid="uid://cww2hw50p8q3i" path="res://gdre_file_tree.gd" id="2_02dmf"]
[ext_resource type="Script" uid="uid://bga3f1eshrdxt" path="res://gdre_recover.gd" id="2_edjtc"]
[ext_resource type="Texture2D" uid="uid://byablbp3l8foe" path="res://gdre_icons/gdre_Search.svg" id="3_i5ujv"]
[ext_resource type="PackedScene" uid="uid://bjevsw5r631f1" path="res://gdre_resource_preview.tscn" id="5_ljbdy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bn3y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47yxm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7bby"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_avhe5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2b6b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_au50u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jbkrx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3os3m"]

[sub_resource type="ButtonGroup" id="ButtonGroup_bvmre"]

[node name="GdreRecover" type="Window"]
oversampling_override = 1.0
title = "Project Recovery"
position = Vector2i(0, 24)
size = Vector2i(1400, 800)
min_size = Vector2i(730, 500)
theme = ExtResource("1_ljbdy")
script = ExtResource("2_edjtc")

[node name="ExtractDirDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[node name="Preview" type="AcceptDialog" parent="."]

[node name="DownloadConfirmDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(426, 149)
ok_button_text = "Yes"
cancel_button_text = "No"

[node name="VBoxContainer" type="VBoxContainer" parent="DownloadConfirmDialog"]
anchors_preset = -1
offset_left = 8.0
offset_top = 8.0
offset_right = 418.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="DownloadConfirmDialog/VBoxContainer"]
layout_mode = 2
text = "GDExtension plugins have been detected.
Do you want to automatically detect and download?"

[node name="DontAskAgainCheck" type="CheckBox" parent="DownloadConfirmDialog/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Don't ask again"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"LightPanel"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
split_offset = 1152
drag_area_highlight_in_editor = true

[node name="TreeViewVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="top_hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox"]
layout_mode = 2

[node name="info_hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 8

[node name="VersionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/info_hbox"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_override_font_sizes/bold_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_1bn3y")
theme_override_styles/focus = SubResource("StyleBoxEmpty_47yxm")
theme_override_styles/background = SubResource("StyleBoxEmpty_p7bby")
theme_override_styles/fill = SubResource("StyleBoxEmpty_avhe5")
bbcode_enabled = true
text = "[b]Version:[/b]"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="VersionText" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/info_hbox"]
unique_name_in_owner = true
layout_mode = 2
text = "0.0.0"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/info_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/info_hbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_y2b6b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_au50u")
theme_override_styles/background = SubResource("StyleBoxEmpty_jbkrx")
theme_override_styles/fill = SubResource("StyleBoxEmpty_3os3m")
bbcode_enabled = true
text = "[b]Info:[/b]"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="InfoText" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/info_hbox"]
unique_name_in_owner = true
layout_mode = 2
text = "<info text>"

[node name="filter_hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="Check" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/filter_hbox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Checks all shown files"
text = "Check all"

[node name="Uncheck" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/filter_hbox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Unchecks all shown files"
text = "Uncheck all"

[node name="Filter" type="LineEdit" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/filter_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 31)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Files"
clear_button_enabled = true
right_icon = ExtResource("3_i5ujv")

[node name="FileTree" type="Tree" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
select_mode = 2
script = ExtResource("2_02dmf")
metadata/_custom_type_script = "uid://cww2hw50p8q3i"

[node name="dir_hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DirectoryLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/dir_hbox"]
unique_name_in_owner = true
layout_mode = 2
text = "Extract to..."

[node name="Directory" type="LineEdit" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/dir_hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DirectoryButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/dir_hbox"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="GdreResourcePreview" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("5_ljbdy")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="RadioButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="ExtractOnly" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/RadioButtons"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_bvmre")
text = "Extract Only"

[node name="FullRecovery" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/RadioButtons"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_bvmre")
text = "Full Recovery"

[node name="ExtractButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Extract"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ShowResourcePreview" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Show Resource Preview..."

[node name="ExportResDirDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a Directory"
position = Vector2i(0, 24)
file_mode = 2
display_mode = 1
access = 2
option_count = 2
option_0/name = "Directory Structure"
option_0/values = PackedStringArray("Flat", "Relative Hierarchical", "Matching Project")
option_1/name = "Export Scenes as GLB"
option_1/values = PackedStringArray("False", "True")

[node name="ExtractResDirDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a Directory"
file_mode = 2
display_mode = 1
access = 2
option_count = 1
option_0/name = "Directory Structure"
option_0/values = PackedStringArray("Flat", "Relative Hierarchical", "Matching Project")

[connection signal="close_requested" from="." to="." method="cancelled"]
[connection signal="canceled" from="DownloadConfirmDialog" to="." method="_on_download_confirm_dialog_canceled"]
[connection signal="confirmed" from="DownloadConfirmDialog" to="." method="_on_download_confirm_dialog_confirmed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/filter_hbox/Check" to="." method="_on_check_all_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/filter_hbox/Uncheck" to="." method="_on_uncheck_all_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/top_hbox/filter_hbox/Filter" to="." method="_on_filter_text_changed"]
[connection signal="cell_selected" from="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/FileTree" to="." method="_on_file_tree_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/FileTree" to="." method="_on_file_tree_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/TreeViewVBox/dir_hbox/DirectoryButton" to="." method="_on_directory_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/ExtractButton" to="." method="confirm"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/ShowResourcePreview" to="." method="_on_show_resource_preview_toggled"]
